[tool.poetry]
name = "hexlet_django_blog"
version = "0.1.0"
description = ""
authors = ["Konstantin Chupin <chupin.k@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.1.6"
python-dotenv = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
